@@ -25,7 +25,7 @@
 	      <accelerator key="X" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image161">
+		<widget class="GtkImage" id="image171">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-cut</property>
 		  <property name="icon_size">1</property>
@@ -48,7 +48,7 @@
 	      <accelerator key="C" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image162">
+		<widget class="GtkImage" id="image172">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-copy</property>
 		  <property name="icon_size">1</property>
@@ -71,7 +71,7 @@
 	      <accelerator key="V" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image163">
+		<widget class="GtkImage" id="image173">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-paste</property>
 		  <property name="icon_size">1</property>
@@ -110,7 +110,7 @@
 	      <accelerator key="Delete" modifiers="0" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image164">
+		<widget class="GtkImage" id="image174">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-delete</property>
 		  <property name="icon_size">1</property>
@@ -173,7 +173,7 @@
 	      <signal name="activate" handler="rbm_move_to_parent_dir1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image165">
+		<widget class="GtkImage" id="image175">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-goto-top</property>
 		  <property name="icon_size">1</property>
@@ -195,7 +195,7 @@
 	      <signal name="activate" handler="rbm_set_as_working_dir1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image166">
+		<widget class="GtkImage" id="image176">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-save</property>
 		  <property name="icon_size">1</property>
@@ -228,66 +228,23 @@
   </child>
 
   <child>
-    <widget class="GtkMenuItem" id="gfm1">
+    <widget class="GtkSeparatorMenuItem" id="separator7">
       <property name="visible">True</property>
-      <property name="label" translatable="yes">_Groups</property>
-      <property name="use_underline">True</property>
-
-      <child>
-	<widget class="GtkMenu" id="gfm1_menu">
-
-	  <child>
-	    <widget class="GtkMenuItem" id="ungroup1">
-	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Ungroup selected file(s)</property>
-	      <property name="label" translatable="yes">_Ungroup</property>
-	      <property name="use_underline">True</property>
-	      <signal name="activate" handler="rbm_ungroup1_activate"/>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkMenuItem" id="group1">
-	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Group selected file(s) together</property>
-	      <property name="label" translatable="yes">_Group</property>
-	      <property name="use_underline">True</property>
-	      <signal name="activate" handler="rbm_group1_activate"/>
-	    </widget>
-	  </child>
-	</widget>
-      </child>
     </widget>
   </child>
 
   <child>
-    <widget class="GtkMenuItem" id="tigroups1">
+    <widget class="GtkMenuItem" id="gfm1">
       <property name="visible">True</property>
-      <property name="label" translatable="yes">_TiGroups</property>
+      <property name="label" translatable="yes">Open...</property>
       <property name="use_underline">True</property>
+      <signal name="activate" handler="rbm_opengfm_activate" last_modification_time="Tue, 26 Jun 2007 18:22:04 GMT"/>
+    </widget>
+  </child>
 
-      <child>
-	<widget class="GtkMenu" id="tigroups1_menu">
-
-	  <child>
-	    <widget class="GtkMenuItem" id="ungroup2">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">_Ungroup</property>
-	      <property name="use_underline">True</property>
-	      <signal name="activate" handler="rbm_ungroup2_activate" last_modification_time="Mon, 28 Aug 2006 07:30:13 GMT"/>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkMenuItem" id="group2">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">_Group</property>
-	      <property name="use_underline">True</property>
-	      <signal name="activate" handler="rbm_group2_activate" last_modification_time="Mon, 28 Aug 2006 07:30:13 GMT"/>
-	    </widget>
-	  </child>
-	</widget>
-      </child>
+  <child>
+    <widget class="GtkSeparatorMenuItem" id="separator6">
+      <property name="visible">True</property>
     </widget>
   </child>
 
