@@ -25,14 +25,7 @@ gchar *s = N_("_Go to parent dir");
 gchar *s = N_("Set the current directory as working directory whenever TiLP starts.");
 gchar *s = N_("Set as working _folder");
 gchar *s = N_("_Properties");
-gchar *s = N_("_Groups");
-gchar *s = N_("Ungroup selected file(s)");
-gchar *s = N_("_Ungroup");
-gchar *s = N_("Group selected file(s) together");
-gchar *s = N_("_Group");
-gchar *s = N_("_TiGroups");
-gchar *s = N_("_Ungroup");
-gchar *s = N_("_Group");
+gchar *s = N_("Open...");
 gchar *s = N_("_Options");
 gchar *s = N_("_Show all files");
 gchar *s = N_("_Confirm delete/overwrite");
