@@ -91,15 +91,21 @@ files, </font><font size="3">rename/delete files, create a new folder,<br>
 - <span style="font-style: italic;">File </span>: (un)select all
 files, go to parent folder (..), set as working folder (and save
 config), refresh local view,<br>
-- <span style="font-style: italic;">Groups </span>: </font><font
+- <span style="font-style: italic;">Groups </span>(*): </font><font
  size="3">group/ungroup selected files (use group format),<br>
-- <span style="font-style: italic;">TiGroups </span>: group/ungroup
+- <span style="font-style: italic;">TiGroups </span>(*):
+group/ungroup
 selected files (use TiGroup format)<br>
 </font><font size="3">- <span style="font-style: italic;">Options </span>:
 show all files, confirm deleting/overwriting, receive as group,<br>
 - <span style="font-style: italic;">Change Drive </span>:</font><font
  size="3"> change the working drive [Win32]</font><br>
 <br>
+(*) Note: since v1.06 of TiLP, these menu entries have been removed and
+replaced by an entry named '<span style="font-style: italic;">Open...</span>'.
+This entry allows to directly open the file with the Group File Manager
+(GFM). This is an external application which can be download from &lt;<a
+ href="http://lpg.ticalc.org/prj_gfm">http://lpg.ticalc.org/prj_gfm</a>&gt;.<br>
 <hr>
 </body>
 </html>
