@@ -11,7 +11,8 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	know whether file is targetted for TI84+ or TI84+ USB).
 	Sending is OK, receiving is still KO because we should pass vartype 
 	with named lists.
-	-
+	- removed grouping/ungrouping of files from popup menu. Replaced it by
+		an access to GFM.
 
 - 10/06/2007, version 1.05 (1.0.5, 1.0.6, 1.0.6, 1.0.3): roms
 	- sending of APPV variables in FLASH is not allowed; avoid this.
